ecmascript/parser/tests/test262-error-references/fail/b94278c0e4bdb364.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/b94278c0e4bdb364.js:1:3
  |
1 | _﻿_
  |  ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/b94278c0e4bdb364.js:1:1
  |
1 | _﻿_
  | ^

